--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "json-diff3",
   "version": "1.0.0",
   "description": "three way merge json structures",
-  "main": "./dist/index.cjs.js",
-  "module": "./dist/index.esm.js",
-  "typings": "./lib/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "typings": "./dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "build": "rollup -c",
     "lint": "tslint -c tslint.json src/**/*.ts",
     "prepublish": "npm run build"
+  },
+  "engines": {
+    "node": ">=6"
   },
   "repository": {
     "type": "git",
@@ -37,7 +40,6 @@
   },
   "files": [
     "./README.md",
-    "./bin/*",
     "./dist/*",
     "./src/*"
   ],
@@ -49,8 +51,13 @@
     "rollup-plugin-commonjs": "9.2.0",
     "rollup-plugin-node-resolve": "4.0.0",
     "rollup-plugin-typescript2": "0.19.0",
+    "ts-jest": "23.10.5",
     "tslint": "5.12.1",
     "tslint-config-prettier": "1.17.0",
     "typescript": "3.2.2"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
