--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "test": "jest --watch",
     "test-ci": "jest --coverage",
     "build": "rollup -c",
-    "lint": "tslint -c tslint.json src/**/*.ts",
+    "lint": "eslint src/**/*.ts",
     "prepublishOnly": "rm -rf dist/ && npm run build"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "engines": {
     "node": ">=6"
@@ -43,18 +48,23 @@
     "src/**/*"
   ],
   "devDependencies": {
-    "@types/jest": "23.3.13",
-    "codecov": "3.1.0",
-    "jest": "23.6.0",
-    "prettier": "1.16.0",
-    "rollup": "1.1.2",
-    "rollup-plugin-commonjs": "9.2.0",
-    "rollup-plugin-node-resolve": "4.0.0",
-    "rollup-plugin-typescript2": "0.19.2",
-    "ts-jest": "23.10.5",
-    "tslint": "5.12.1",
-    "tslint-config-prettier": "1.17.0",
-    "typescript": "3.2.4"
+    "@types/jest": "24.0.11",
+    "@typescript-eslint/eslint-plugin": "1.7.0",
+    "@typescript-eslint/parser": "1.7.0",
+    "codecov": "3.3.0",
+    "eslint": "5.16.0",
+    "eslint-config-prettier": "4.1.0",
+    "husky": "1.3.1",
+    "jest": "24.7.1",
+    "prettier": "1.17.0",
+    "pretty-quick": "1.10.0",
+    "rollup": "1.10.1",
+    "rollup-plugin-commonjs": "9.3.4",
+    "rollup-plugin-node-resolve": "4.2.3",
+    "rollup-plugin-typescript2": "0.20.1",
+    "ts-jest": "24.0.2",
+    "tslint-config-prettier": "1.18.0",
+    "typescript": "3.4.4"
   },
   "jest": {
     "preset": "ts-jest",
