--- a/package.json
+++ b/package.json
@@ -48,23 +48,23 @@
     "src/**/*"
   ],
   "devDependencies": {
-    "@types/jest": "24.0.11",
-    "@typescript-eslint/eslint-plugin": "1.7.0",
-    "@typescript-eslint/parser": "1.7.0",
-    "codecov": "3.3.0",
+    "@types/jest": "^24.0.13",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "codecov": "^3.5.0",
     "eslint": "5.16.0",
-    "eslint-config-prettier": "4.1.0",
-    "husky": "1.3.1",
-    "jest": "24.7.1",
-    "prettier": "1.17.0",
-    "pretty-quick": "1.10.0",
-    "rollup": "1.10.1",
-    "rollup-plugin-commonjs": "9.3.4",
-    "rollup-plugin-node-resolve": "4.2.3",
-    "rollup-plugin-typescript2": "0.20.1",
+    "eslint-config-prettier": "^4.3.0",
+    "husky": "^2.3.0",
+    "jest": "^24.8.0",
+    "prettier": "^1.17.1",
+    "pretty-quick": "^1.11.0",
+    "rollup": "^1.12.4",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-resolve": "^5.0.0",
+    "rollup-plugin-typescript2": "^0.21.1",
     "ts-jest": "24.0.2",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "3.4.4"
+    "typescript": "^3.5.1"
   },
   "jest": {
     "preset": "ts-jest",
