--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "json-diff3",
-  "version": "1.1.1",
-  "description": "three way merge json structures",
+  "name": "trimerge",
+  "version": "1.0.0",
+  "description": "three way merge JSON and arbitrary structures",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "typings": "./dist/index.d.ts",
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/marcello3d/json-diff3.git"
+    "url": "git+https://github.com/marcello3d/trimerge.git"
   },
   "keywords": [
     "json",
@@ -37,9 +37,9 @@
   },
   "license": "Zlib",
   "bugs": {
-    "url": "https://github.com/marcello3d/json-diff3/issues"
+    "url": "https://github.com/marcello3d/trimerge/issues"
   },
-  "homepage": "https://github.com/marcello3d/json-diff3#readme",
+  "homepage": "https://github.com/marcello3d/trimerge#readme",
   "dependencies": {
     "node-diff3": "1.0.0"
   },
@@ -48,23 +48,23 @@
     "src/**/*"
   ],
   "devDependencies": {
-    "@types/jest": "^24.0.13",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@types/jest": "24.0.15",
+    "@typescript-eslint/eslint-plugin": "1.10.2",
+    "@typescript-eslint/parser": "1.10.2",
     "codecov": "^3.5.0",
     "eslint": "5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "husky": "^2.3.0",
+    "eslint-config-prettier": "5.0.0",
+    "husky": "2.4.1",
     "jest": "^24.8.0",
-    "prettier": "^1.17.1",
-    "pretty-quick": "^1.11.0",
-    "rollup": "^1.13.0",
+    "prettier": "1.18.2",
+    "pretty-quick": "1.11.1",
+    "rollup": "1.15.6",
     "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.1",
+    "rollup-plugin-node-resolve": "5.0.3",
     "rollup-plugin-typescript2": "^0.21.1",
     "ts-jest": "24.0.2",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "^3.5.1"
+    "typescript": "3.5.2"
   },
   "jest": {
     "preset": "ts-jest",
