--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
+      - run: npm run lint
       - run: npm run test-ci
+      - run: npm run build
       - run: npx codecov
