--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "url": "https://github.com/marcello3d/trimerge/issues"
   },
   "homepage": "https://github.com/marcello3d/trimerge#readme",
-  "dependencies": {
-    "node-diff3": "1.0.0"
-  },
+  "dependencies": {},
   "files": [
     "dist/**/*",
     "src/**/*"
@@ -56,6 +54,7 @@
     "eslint-config-prettier": "5.0.0",
     "husky": "2.4.1",
     "jest": "^24.8.0",
+    "node-diff3": "1.0.0",
     "prettier": "1.18.2",
     "pretty-quick": "1.11.1",
     "rollup": "1.15.6",
