--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "prettier/@typescript-eslint"
   ],
   "rules": {
+    "@typescript-eslint/no-explicit-any": false,
     "@typescript-eslint/no-use-before-define": false,
     "@typescript-eslint/no-parameter-properties": false,
     "@typescript-eslint/explicit-function-return-type": false
