--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,8 @@
     "@typescript-eslint/no-explicit-any": false,
     "@typescript-eslint/no-use-before-define": false,
     "@typescript-eslint/no-parameter-properties": false,
-    "@typescript-eslint/explicit-function-return-type": false
+    "@typescript-eslint/explicit-function-return-type": false,
+    "no-var": ["error"],
+    "prefer-const": ["error"]
   }
 }
