--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "name": "Marcello Bastéa-Forte",
     "email": "marcello@cellosoft.com"
   },
-  "license": "Zlib",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/marcello3d/trimerge/issues"
   },
@@ -54,13 +54,12 @@
     "eslint-config-prettier": "5.0.0",
     "husky": "2.4.1",
     "jest": "^24.8.0",
-    "node-diff3": "1.0.0",
     "prettier": "1.18.2",
     "pretty-quick": "1.11.1",
-    "rollup": "1.15.6",
+    "rollup": "^1.16.1",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-node-resolve": "5.0.3",
-    "rollup-plugin-typescript2": "^0.21.1",
+    "rollup-plugin-typescript2": "^0.21.2",
     "ts-jest": "24.0.2",
     "tslint-config-prettier": "1.18.0",
     "typescript": "3.5.2"
