--- a/.eslintrc
+++ b/.eslintrc
@@ -5,10 +5,10 @@
     "prettier/@typescript-eslint"
   ],
   "rules": {
-    "@typescript-eslint/no-explicit-any": false,
-    "@typescript-eslint/no-use-before-define": false,
-    "@typescript-eslint/no-parameter-properties": false,
-    "@typescript-eslint/explicit-function-return-type": false,
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-use-before-define": 0,
+    "@typescript-eslint/no-parameter-properties": 0,
+    "@typescript-eslint/explicit-function-return-type": 0,
     "no-var": ["error"],
     "prefer-const": ["error"]
   }
