--- a/package.json
+++ b/package.json
@@ -47,22 +47,22 @@
   ],
   "devDependencies": {
     "@types/jest": "24.0.15",
-    "@typescript-eslint/eslint-plugin": "1.10.2",
-    "@typescript-eslint/parser": "1.10.2",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "codecov": "^3.5.0",
-    "eslint": "5.16.0",
-    "eslint-config-prettier": "5.0.0",
-    "husky": "2.4.1",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "husky": "^3.0.0",
     "jest": "^24.8.0",
     "prettier": "1.18.2",
     "pretty-quick": "1.11.1",
-    "rollup": "^1.16.1",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "5.0.3",
-    "rollup-plugin-typescript2": "^0.21.2",
+    "rollup": "^1.16.7",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript2": "^0.22.0",
     "ts-jest": "24.0.2",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "3.5.2"
+    "typescript": "^3.5.3"
   },
   "jest": {
     "preset": "ts-jest",
