--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
     "url": "https://github.com/marcello3d/trimerge/issues"
   },
   "homepage": "https://github.com/marcello3d/trimerge#readme",
-  "dependencies": {},
+  "dependencies": {
+    "fast-diff": "^1.2.0"
+  },
   "files": [
     "dist/**/*",
     "src/**/*"
   ],
   "devDependencies": {
+    "@types/fast-diff": "^1.2.0",
     "@types/jest": "24.0.15",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
