--- a/package.json
+++ b/package.json
@@ -47,24 +47,24 @@
   ],
   "devDependencies": {
     "@types/fast-diff": "^1.2.0",
-    "@types/jest": "24.0.15",
-    "@typescript-eslint/eslint-plugin": "^1.12.0",
-    "@typescript-eslint/parser": "^1.12.0",
-    "codecov": "^3.5.0",
-    "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.0.0",
+    "@types/jest": "^24.0.19",
+    "@typescript-eslint/eslint-plugin": "^2.5.0",
+    "@typescript-eslint/parser": "^2.5.0",
+    "codecov": "^3.6.1",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
     "fast-diff": "^1.2.0",
-    "husky": "^3.0.0",
-    "jest": "^24.8.0",
+    "husky": "^3.0.9",
+    "jest": "^24.9.0",
     "prettier": "1.18.2",
-    "pretty-quick": "1.11.1",
-    "rollup": "^1.17.0",
-    "rollup-plugin-commonjs": "^10.0.1",
+    "pretty-quick": "^2.0.0",
+    "rollup": "^1.25.2",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript2": "^0.22.0",
-    "ts-jest": "24.0.2",
+    "rollup-plugin-typescript2": "^0.24.3",
+    "ts-jest": "^24.1.0",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.4"
   },
   "jest": {
     "preset": "ts-jest",
