--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -14,8 +14,8 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm lint
-      - run: npm test-ci
+      - run: npm run lint
+      - run: npm run test-ci
       - run: npm run build
       - run: npm publish --access public
         env:
