--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "module": "./dist/index.esm.js",
   "typings": "./dist/index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "test": "jest --watch",
     "test-ci": "jest --coverage",
@@ -46,25 +47,25 @@
     "src/**/*"
   ],
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@types/fast-diff": "^1.2.0",
-    "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^2.5.0",
-    "@typescript-eslint/parser": "^2.5.0",
-    "codecov": "^3.6.1",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
+    "@types/jest": "^25.1.4",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
+    "codecov": "^3.6.5",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
     "fast-diff": "^1.2.0",
-    "husky": "^3.0.9",
-    "jest": "^24.9.0",
-    "prettier": "1.18.2",
-    "pretty-quick": "^2.0.0",
-    "rollup": "^1.25.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript2": "^0.24.3",
-    "ts-jest": "^24.1.0",
+    "husky": "^4.2.3",
+    "jest": "^25.1.0",
+    "prettier": "2.0.1",
+    "pretty-quick": "^2.0.1",
+    "rollup": "^2.1.0",
+    "rollup-plugin-typescript2": "^0.26.0",
+    "ts-jest": "^25.2.1",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.8.3"
   },
   "jest": {
     "preset": "ts-jest",
