--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "@typescript-eslint/no-use-before-define": 0,
     "@typescript-eslint/no-parameter-properties": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/explicit-module-boundary-types": 0,
     "no-var": ["error"],
     "prefer-const": ["error"]
   }
