--- a/package.json
+++ b/package.json
@@ -47,25 +47,25 @@
     "src/**/*"
   ],
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-commonjs": "15.1.0",
+    "@rollup/plugin-node-resolve": "9.0.0",
     "@types/fast-diff": "^1.2.0",
-    "@types/jest": "^25.1.4",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
-    "codecov": "^3.6.5",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
+    "@types/jest": "26.0.14",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "codecov": "3.7.2",
+    "eslint": "7.10.0",
+    "eslint-config-prettier": "6.12.0",
     "fast-diff": "^1.2.0",
-    "husky": "^4.2.3",
-    "jest": "^25.1.0",
-    "prettier": "2.0.1",
-    "pretty-quick": "^2.0.1",
-    "rollup": "^2.1.0",
-    "rollup-plugin-typescript2": "^0.26.0",
-    "ts-jest": "^25.2.1",
+    "husky": "4.3.0",
+    "jest": "26.4.2",
+    "prettier": "2.1.2",
+    "pretty-quick": "3.0.2",
+    "rollup": "2.28.2",
+    "rollup-plugin-typescript2": "0.27.3",
+    "ts-jest": "26.4.1",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "^3.8.3"
+    "typescript": "4.0.3"
   },
   "jest": {
     "preset": "ts-jest",
