--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "fast-diff": "^1.2.0",
+    "fast-myers-diff": "^3.0.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
+    "mdiff": "^1.3.1",
     "prettier": "1.18.2",
     "pretty-quick": "^2.0.0",
     "rollup": "^1.25.2",
