--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trimerge",
-  "version": "1.3.0-alpha.14",
+  "version": "1.3.0-alpha.15",
   "description": "three way merge JSON and arbitrary structures",
   "main": "./dist/index.js",
   "module": "./dist/index.esm.js",
@@ -41,7 +41,6 @@
     "url": "https://github.com/marcello3d/trimerge/issues"
   },
   "homepage": "https://github.com/marcello3d/trimerge#readme",
-  "dependencies": {},
   "files": [
     "dist/**/*",
     "src/**/*"
@@ -57,6 +56,7 @@
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.12.0",
     "fast-diff": "^1.2.0",
+    "fast-myers-diff": "^3.0.0",
     "husky": "4.3.0",
     "jest": "26.4.2",
     "prettier": "2.1.2",
