--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "fast-diff": "^1.2.0",
     "fast-myers-diff": "^3.0.0",
     "husky": "4.3.0",
+    "is-core-module": "^2.4.0",
     "jest": "26.4.2",
     "prettier": "2.1.2",
     "pretty-quick": "3.0.2",
